<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        tools:context="com.example.happy.LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="171dp"
            android:layout_height="145dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@mipmap/logo_with_name"
            android:tint="@color/colorPrimaryDark"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/account_name"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/password" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimaryDark"
            android:theme="@color/colorAccent"
            android:textSize="6pt"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/colorPrimaryDark"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/forgot_your_login_info"
            android:layout_marginBottom="50dp"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</ScrollView>