<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        tools:context="com.example.happy.CreateAccountActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/logo"
            android:tint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/create_account_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/create_account_email" />

        <EditText
            android:id="@+id/et_tel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/login_edittext_bg"
            android:hint="@string/create_account_tel"
            android:inputType="textPhonetic"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorPrimary" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/create_account_password" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_bg"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/create_account_confirm_password" />

        <Button
            android:id="@+id/btn_save_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_account_buttom"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp" />

    </LinearLayout>

</ScrollView>