<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        tools:context="com.example.happy.LoginOrNewAccountActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="171dp"
            android:layout_height="145dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo_with_name"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/do_you_have_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30dp"/>

        <Button
            android:id="@+id/btn_go_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/already_have_account"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp" />

        <Button
            android:id="@+id/btn_go_to_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/register_new_account"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

    </LinearLayout>

</ScrollView>