<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        tools:context="com.example.happy.JoinRepOrCreateRepActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="171dp"
            android:layout_height="145dp"
            android:layout_gravity="center"
            android:src="@mipmap/logo_with_name"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/already_lives_in_rep"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textSize="35dp"/>

        <Button
            android:id="@+id/btn_go_to_existing_rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/link_rep"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp" />

        <Button
            android:id="@+id/btn_go_to_create_rep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:text="@string/create_rep"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"/>

    </LinearLayout>

</ScrollView>